---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "to_hash",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "array",
            "length": 10,
            "type": {
              "kind": "field"
            }
          }
        },
        "visibility": "private"
      },
      {
        "name": "enable",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "boolean"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 3,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _27",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21]",
    "public parameters indices : []",
    "return value indices : [_22, _23, _24]",
    "BLACKBOX::RANGE [(_20, 1)] []",
    "BLACKBOX::RANGE [(_21, 1)] []",
    "CALL func 1: PREDICATE: EXPR [ (1, _20) 0 ]",
    "inputs: [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9], outputs: [_25]",
    "CALL func 1: PREDICATE: EXPR [ (1, _21) 0 ]",
    "inputs: [_10, _11, _12, _13, _14, _15, _16, _17, _18, _19], outputs: [_26]",
    "CALL func 2: PREDICATE: EXPR [ 1 ]",
    "inputs: [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _0, _1, _2, _3, _4, _5, _6, _7, _8, _9], outputs: [_27]",
    "EXPR [ (-1, _20, _25) (1, _22) 0 ]",
    "EXPR [ (-1, _21, _26) (1, _23) 0 ]",
    "EXPR [ (1, _24) (-1, _27) 0 ]",
    "func 1",
    "current witness index : _34",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9]",
    "public parameters indices : []",
    "return value indices : [_10]",
    "EXPR [ (-1, _11) 184467440737095516160 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_0, 254), (_1, 254), (_2, 254), (_11, 254)] [_12, _13, _14, _15]",
    "EXPR [ (1, _3) (1, _12) (-1, _16) 0 ]",
    "EXPR [ (1, _4) (1, _13) (-1, _17) 0 ]",
    "EXPR [ (1, _5) (1, _14) (-1, _18) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_16, 254), (_17, 254), (_18, 254), (_15, 254)] [_19, _20, _21, _22]",
    "EXPR [ (1, _6) (1, _19) (-1, _23) 0 ]",
    "EXPR [ (1, _7) (1, _20) (-1, _24) 0 ]",
    "EXPR [ (1, _8) (1, _21) (-1, _25) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_23, 254), (_24, 254), (_25, 254), (_22, 254)] [_26, _27, _28, _29]",
    "EXPR [ (1, _9) (1, _26) (-1, _30) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_30, 254), (_27, 254), (_28, 254), (_29, 254)] [_31, _32, _33, _34]",
    "EXPR [ (1, _10) (-1, _31) 0 ]",
    "func 2",
    "current witness index : _66",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19]",
    "public parameters indices : []",
    "return value indices : [_20]",
    "EXPR [ (-1, _21) 368934881474191032320 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_0, 254), (_1, 254), (_2, 254), (_21, 254)] [_22, _23, _24, _25]",
    "EXPR [ (1, _3) (1, _22) (-1, _26) 0 ]",
    "EXPR [ (1, _4) (1, _23) (-1, _27) 0 ]",
    "EXPR [ (1, _5) (1, _24) (-1, _28) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_26, 254), (_27, 254), (_28, 254), (_25, 254)] [_29, _30, _31, _32]",
    "EXPR [ (1, _6) (1, _29) (-1, _33) 0 ]",
    "EXPR [ (1, _7) (1, _30) (-1, _34) 0 ]",
    "EXPR [ (1, _8) (1, _31) (-1, _35) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_33, 254), (_34, 254), (_35, 254), (_32, 254)] [_36, _37, _38, _39]",
    "EXPR [ (1, _9) (1, _36) (-1, _40) 0 ]",
    "EXPR [ (1, _10) (1, _37) (-1, _41) 0 ]",
    "EXPR [ (1, _11) (1, _38) (-1, _42) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_40, 254), (_41, 254), (_42, 254), (_39, 254)] [_43, _44, _45, _46]",
    "EXPR [ (1, _12) (1, _43) (-1, _47) 0 ]",
    "EXPR [ (1, _13) (1, _44) (-1, _48) 0 ]",
    "EXPR [ (1, _14) (1, _45) (-1, _49) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_47, 254), (_48, 254), (_49, 254), (_46, 254)] [_50, _51, _52, _53]",
    "EXPR [ (1, _15) (1, _50) (-1, _54) 0 ]",
    "EXPR [ (1, _16) (1, _51) (-1, _55) 0 ]",
    "EXPR [ (1, _17) (1, _52) (-1, _56) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_54, 254), (_55, 254), (_56, 254), (_53, 254)] [_57, _58, _59, _60]",
    "EXPR [ (1, _18) (1, _57) (-1, _61) 0 ]",
    "EXPR [ (1, _19) (1, _58) (-1, _62) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_61, 254), (_62, 254), (_59, 254), (_60, 254)] [_63, _64, _65, _66]",
    "EXPR [ (1, _20) (-1, _63) 0 ]"
  ],
  "debug_symbols": "7ZXbisIwEIbfJde9yEyak6+yiFSNUihVaruwiO++aQ7VwrZI6oIX3sxo4/ebzGT+XsnebLvjpqwPpwtZfV3JtimrqjxuqtOuaMtTbZ9ebxmJXzdtY4x9RB7WLXUuGlO3ZFV3VZWR76Lq3I8u56J2uS0au0ozYuq9zVbwUFam/3TL7jSdRpmKMNN3nD/Nc8oCz5En8FLIwEuhEngFOvAq1yn/H2iQI3htvxW7shm1iyBZYUaYizlZ5bdetymLbWVCOw9dvXvobvtzjiux/+fmtDP7rjG9tFvrd/qmtwMYj/XRbKq6MHO7OAY+B3Hn5YjHaR5RxN0jSpqkoOIFQUZxSiGfqQGIeAgAxVMUGI17AIZqSkFMK+g89kFLnsADxeEMVKQoaBonRWNSJ8VgNCge79JYAejiMgIsPMWswDONmBsIrYaB4ClllCBiGSWbHAjgM2WUkg2mpycnApZeR1h+H2ePoZEO3oQwkvjbval9R2QEXEQXmYu5i9xF4aJ0UbmoPWVh6DP0+eP7H9//+P5LDYsuN6zFtv2fL45nHY++k+MFw+uTx8Hz4AXAK4CXAK8BXgS8CnoVDHuwKmAHBlnIeZ9f5Kbr2y8=",
  "file_map": {
    "50": {
      "source": "global NUM_HASHES: u32 = 2;\nglobal HASH_LENGTH: u32 = 10;\n\n#[fold]\npub fn poseidon_hash<let N: u32>(inputs: [Field; N]) -> Field {\n    poseidon::poseidon2::Poseidon2::hash(inputs, inputs.len())\n}\n\nfn main(\n    to_hash: [[Field; HASH_LENGTH]; NUM_HASHES],\n    enable: [bool; NUM_HASHES],\n) -> pub [Field; NUM_HASHES + 1] {\n    let mut result = [0; NUM_HASHES + 1];\n    for i in 0..NUM_HASHES {\n        let enable = enable[i];\n        let to_hash = to_hash[i];\n        if enable {\n            result[i] = poseidon_hash(to_hash);\n        }\n    }\n\n    // We want to make sure that the foldable function with a numeric generic\n    // is monomorphized correctly.\n    let mut double_preimage = [0; 20];\n    for i in 0..HASH_LENGTH * 2 {\n        double_preimage[i] = to_hash[0][i % HASH_LENGTH];\n    }\n    result[NUM_HASHES] = poseidon_hash(double_preimage);\n\n    result\n}\n",
      "path": ""
    },
    "57": {
      "source": "use std::default::Default;\nuse std::hash::Hasher;\n\ncomptime global RATE: u32 = 3;\n\npub struct Poseidon2 {\n    cache: [Field; 3],\n    state: [Field; 4],\n    cache_size: u32,\n    squeeze_mode: bool, // 0 => absorb, 1 => squeeze\n}\n\nimpl Poseidon2 {\n    #[no_predicates]\n    pub fn hash<let N: u32>(input: [Field; N], message_size: u32) -> Field {\n        Poseidon2::hash_internal(input, message_size, message_size != N)\n    }\n\n    pub(crate) fn new(iv: Field) -> Poseidon2 {\n        let mut result =\n            Poseidon2 { cache: [0; 3], state: [0; 4], cache_size: 0, squeeze_mode: false };\n        result.state[RATE] = iv;\n        result\n    }\n\n    fn perform_duplex(&mut self) {\n        // add the cache into sponge state\n        for i in 0..RATE {\n            // We effectively zero-pad the cache by only adding to the state\n            // cache that is less than the specified `cache_size`\n            if i < self.cache_size {\n                self.state[i] += self.cache[i];\n            }\n        }\n        self.state = crate::poseidon2_permutation(self.state, 4);\n    }\n\n    fn absorb(&mut self, input: Field) {\n        assert(!self.squeeze_mode);\n        if self.cache_size == RATE {\n            // If we're absorbing, and the cache is full, apply the sponge permutation to compress the cache\n            self.perform_duplex();\n            self.cache[0] = input;\n            self.cache_size = 1;\n        } else {\n            // If we're absorbing, and the cache is not full, add the input into the cache\n            self.cache[self.cache_size] = input;\n            self.cache_size += 1;\n        }\n    }\n\n    fn squeeze(&mut self) -> Field {\n        assert(!self.squeeze_mode);\n        // If we're in absorb mode, apply sponge permutation to compress the cache.\n        self.perform_duplex();\n        self.squeeze_mode = true;\n\n        // Pop one item off the top of the permutation and return it.\n        self.state[0]\n    }\n\n    fn hash_internal<let N: u32>(\n        input: [Field; N],\n        in_len: u32,\n        is_variable_length: bool,\n    ) -> Field {\n        let two_pow_64 = 18446744073709551616;\n        let iv: Field = (in_len as Field) * two_pow_64;\n        let mut sponge = Poseidon2::new(iv);\n        for i in 0..input.len() {\n            if i < in_len {\n                sponge.absorb(input[i]);\n            }\n        }\n\n        // In the case where the hash preimage is variable-length, we append `1` to the end of the input, to distinguish\n        // from fixed-length hashes. (the combination of this additional field element + the hash IV ensures\n        // fixed-length and variable-length hashes do not collide)\n        if is_variable_length {\n            sponge.absorb(1);\n        }\n        sponge.squeeze()\n    }\n}\n\npub struct Poseidon2Hasher {\n    _state: [Field],\n}\n\nimpl Hasher for Poseidon2Hasher {\n    fn finish(self) -> Field {\n        let iv: Field = (self._state.len() as Field) * 18446744073709551616; // iv = (self._state.len() << 64)\n        let mut sponge = Poseidon2::new(iv);\n        for i in 0..self._state.len() {\n            sponge.absorb(self._state[i]);\n        }\n        sponge.squeeze()\n    }\n\n    fn write(&mut self, input: Field) {\n        self._state = self._state.push_back(input);\n    }\n}\n\nimpl Default for Poseidon2Hasher {\n    fn default() -> Self {\n        Poseidon2Hasher { _state: &[] }\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main",
    "poseidon_hash",
    "poseidon_hash"
  ],
  "brillig_names": []
}
